[package]
name = "arena"
version = "0.1.0"
authors = ["lenscas <lenscas@gmail.com>"]
edition = "2018"
default-run = "main"

[dependencies]
quicksilver = "*"
immi = "*"
noise = "*"
rand = { version="*", features = ["stdweb"] }
rayon = "*"
pathfinding = "*"
serde_json = "*"
serde = { version = "1.0", features = ["derive"] }
zip = "0.5"