[package]
name = "arena"
version = "0.1.0"
authors = ["lenscas <lenscas@gmail.com>"]
edition = "2018"
default-run = "main"

[dependencies]
quicksilver = "*"
noise = { version="*", default-features = false, features=[]}
rand = { version="*", features = ["stdweb"] }
rayon = "*"
pathfinding = "*"
serde_json = "*"
serde = { version = "1.0", features = ["derive"] }
zip = {version = "0.5", default-features = false, features = ["deflate"] }
mergui = { git = "https://github.com/lenscas/mergui.git" }